ratings-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings-api
  template:
    metadata:
      labels:
        app: ratings-api # the label for the pods and the deployments
    spec:
      containers:
        - name: ratings-api
          image: acr31016.azurecr.io/ratings-api:__Build.BuildId__ # IMPORTANT: update with your own repository
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # the application listens to this port
          resources:
            requests: # minimum resources required
              cpu: 250m
              memory: 64Mi
            limits: # maximum resources allocated
              cpu: 500m
              memory: 256Mi
          readinessProbe: # is the container ready to receive traffic?
            httpGet:
              port: 3000
              path: /healthz
          livenessProbe: # is the container healthy?
            httpGet:
              port: 3000
              path: /healthz
---
apiVersion: v1
kind: Service
metadata:
  name: ratings-api
spec:
  selector:
    app: ratings-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
